# users_settings_server

./: .gitignore  Cargo.toml  pyproject.toml  requirements.txt
.sqlx/: query-160ba7ba8bd514083af2a982dca1a0f1bc85e5b73d81a12b67d6c2b0d90e5740.json  query-26c34e5d30ff234865930fd193ab0925cfd59304709dd089135c1918ad5fc060.json  query-30aefca980d6708fa760e7cb4196224c1c597c70e57ec71e6deb4556385d355d.json  query-35e8006d09cf49b6a09dd13da0e76fdede08fad31248937d1fff4fc26e07acc0.json  query-3c2ba9baa71516e4f4e3b594fcb940f6ffb66a91ff6368f6b640636d3f955590.json  query-3f6c9d18ee09cfe5597a6f3d08fc77cb20c5e414388ebb70d100648d29a975c6.json  query-468d4e044e88a95969f77dc74c6e1c17907571e5119bf240e4facefef508b510.json  query-512725635fb38c268949661cf2bdc021837cd8b6fb5841c9644f268b89963b98.json  query-51d29079e7c27eb0a59d309255e37fd595887cc3faf60a93533e9eadadcab1da.json  query-544c1f2457ed9c7e971901c3dd35535b3772caa29e9c2c48a60a669544eb3a98.json  query-60a9a7320f1dc54783c6c02f0d56636865da20efa773cb3d9f2b78fb38416800.json  query-6bce140f0cdead4d9d2742dfdf6ddaf23bade20582e42eb37ca19f6c206fe2e6.json  query-71173e6712c4eb17baa451f7c002a3fd1649727e77a6252fc1465747f6c97503.json  query-9ce4bb739dd3e8e8b0b8be165c13524eee4e07fae9a979022319ba106f17effd.json  query-b1f635ae66d1905c3b2b6dbb4fd9247cad8b941d5fe9090e27427915d172b4a6.json  query-bb8185bf6377bb163d439876e8741c3eff2e982469693108e127d27cb0202172.json  query-c0ff30d71783bdbdd69900e75d46a0b4ab41da1679ce9849525415bd4b697974.json  query-cc20029c1ac8cde73bd2a08d2a17740a08c54cf2af13fea288593a94343a71fe.json  (+6 more)
docker/: build.dockerfile
src/: db.rs  (+4 more)
(+35 files in other folders)
