[package]
name = "users_settings_server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "prisma-cli"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = ["postgresql"] }
serde = { version = "1.0.175", features = ["derive"] }

tokio = { version = "1.29.1", features = ["full"] }
axum = { version = "0.6.19", features = ["json"] }
axum-prometheus = "0.4.0"
chrono = "0.4.26"
sentry = "0.31.5"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
tower-http = { version = "0.4.3", features = ["trace"] }
